# substrate-npos-template

./: .gitignore  README.md  customSpec.json  testnet.json
node/: Cargo.toml
node/res/: flaming-fir.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: prepare-test-net.sh  restart-env.sh
scripts/session_keys/: audi4  babe4  gran4  imol4  run.sh
