[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.0", features = ["derive"] }

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02", features = ["wasmtime"] }
sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02", features = ["wasmtime"]  }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02", features = ["wasmtime"]  }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
# sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
# sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-runtime = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }

# Local Dependencies
node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }

### Add
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.126", features = ["derive"] }
structopt = { version = "0.3.25", optional = true }
rand = "0.8"
hex-literal = "0.3.4"
futures = "0.3.16"
log = "0.4.8"

sp-authorship = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sp-transaction-storage-proof = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-consensus-uncles = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sp-keystore = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
node-inspect = { version = "0.9.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }

sc-consensus-babe-rpc = { version = "0.10.0-dev",  git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
pallet-mmr-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
pallet-contracts-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }

# frame dependencies
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
pallet-asset-tx-payment = { version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }

# node-specific dependencies
node-rpc = { version = "3.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }
node-executor = { version = "3.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-02" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag ="monthly-2022-02" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
